--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇸🇬 新加坡-3.75MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-894.5KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-4.41MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇯🇵 日本-10.87MB/s(Youtube:不良林), server: 185.172.113.182, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-17.16MB/s(Youtube:不良林), server: aiasgp1.game.www.klrxyru.cn, port: 1520, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇸🇬 新加坡-3.26MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-258.0KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, sni: v5.tgfaka.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-12.98MB/s(Youtube:不良林), server: 116.63.103.11, port: 45250, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
   - {name: 🇨🇳 中国-12.04MB/s(Youtube:不良林), server: 116.63.103.11, port: 45239, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇨🇳 中国-8.02MB/s(Youtube:不良林), server: io.aicdn.online, port: 12011, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
-  - {name: 🇨🇳 中国-8.04MB/s(Youtube:不良林), server: io.aicdn.online, port: 12017, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇨🇳 中国-8.20MB/s(Youtube:不良林), server: io.aicdn.online, port: 12017, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
   - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: io.aicdn.online, port: 12010, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
-  - {name: 🇨🇳 中国-4.29MB/s(Youtube:不良林), server: io.aicdn.online, port: 12014, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: io.aicdn.online, port: 12014, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇯🇵 日本-894.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-10.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.16MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
