--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.75MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.26MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-258.0KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-3.32MB/s(Youtube:不良林), server: v5.tgfaka.com, port: 48443, type: trojan, password: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, sni: v5.tgfaka.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.98MB/s(Youtube:不良林), server: 116.63.103.11, port: 45250, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇺🇸 美国-3.65MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-799.6KB/s(Youtube:不良林), server: 185.172.113.182, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-12.53MB/s(Youtube:不良林), server: 116.63.103.11, port: 45250, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
   - {name: 🇨🇳 中国-12.04MB/s(Youtube:不良林), server: 116.63.103.11, port: 45239, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
   - {name: 🇨🇳 中国-8.20MB/s(Youtube:不良林), server: io.aicdn.online, port: 12017, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
   - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: io.aicdn.online, port: 12010, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-258.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.98MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
