--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.07MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.75MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.80MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: ec3e47e9-8dd7-4302-aa1a-a5658d34e931, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇺🇸 美国-3.65MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-799.6KB/s(Youtube:不良林), server: 185.172.113.182, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-492.5KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 🇺🇸 美国-4.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇫🇷 法国-1.47MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇨🇳 中国-12.53MB/s(Youtube:不良林), server: 116.63.103.11, port: 45250, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
   - {name: 🇨🇳 中国-12.04MB/s(Youtube:不良林), server: 116.63.103.11, port: 45239, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇨🇳 中国-8.20MB/s(Youtube:不良林), server: io.aicdn.online, port: 12017, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
-  - {name: 🇨🇳 中国-8.08MB/s(Youtube:不良林), server: io.aicdn.online, port: 12010, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇨🇳 中国-7.29MB/s(Youtube:不良林), server: io.aicdn.online, port: 12017, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇨🇳 中国-6.38MB/s(Youtube:不良林), server: io.aicdn.online, port: 12010, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
   - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: io.aicdn.online, port: 12014, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.07MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.80MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.65MB/s(Youtube:不良林)
-      - 🇯🇵 日本-799.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
