--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-492.5KB/s(Youtube:不良林), server: relayjp3.vip.www.klrxyru.cn, port: 1453, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
-  - {name: 🇺🇸 美国-4.47MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
-  - {name: 🇫🇷 法国-1.47MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-4.57MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇯🇵 日本-1.68MB/s(Youtube:不良林), server: 185.172.113.182, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-4.96MB/s(Youtube:不良林), server: relayjp1.vip.www.klrxyru.cn, port: 1451, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
   - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇳 中国-12.53MB/s(Youtube:不良林), server: 116.63.103.11, port: 45250, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
   - {name: 🇨🇳 中国-12.04MB/s(Youtube:不良林), server: 116.63.103.11, port: 45239, type: vmess, uuid: 95987eb1-bf18-4e33-b6c6-8742cc3cf8fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
   - {name: 🇨🇳 中国-7.29MB/s(Youtube:不良林), server: io.aicdn.online, port: 12017, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
   - {name: 🇨🇳 中国-6.38MB/s(Youtube:不良林), server: io.aicdn.online, port: 12010, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
-  - {name: 🇨🇳 中国-1.87MB/s(Youtube:不良林), server: io.aicdn.online, port: 12014, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇨🇳 中国-3.38MB/s(Youtube:不良林), server: io.aicdn.online, port: 12014, type: vmess, uuid: d99de001-19cb-340e-a00d-2895d2019138, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /play.m3u8, ws-headers: {Host: io.aicdn.online}}
+  - {name: 🇯🇵 日本-1.90MB/s(Youtube:不良林), server: 194.156.231.254, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-492.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.47MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.57MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.78MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.96MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-12.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.29MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.87MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.90MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
